# SkillSyncAI-AI-Resume-JD-Analyzer

./: .gitignore  README.md
ResumeAnalyzer/: .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt
ResumeAnalyzer/src/: chunker.py  embedding.py  llm_explainer.py  loader.py  matcher.py  schemas.py  vectorstore.py
resume-jd-analyzer-frontend/: index.html  package-lock.json  package.json
resume-jd-analyzer-frontend/src/: App.jsx
resume-jd-analyzer-frontend/src/components/: Loader.jsx  Navbar.jsx  ResultSection.jsx  UploadSection.jsx
resume-jd-analyzer-frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx
resume-jd-analyzer-frontend/src/styles/: about.css  contact.css  home.css  loader.css  navbar.css  result.css  upload.css
resume-jd-analyzer-spring-backend/: pom.xml
resume-jd-analyzer-spring-backend/src/main/java/com/project/resume_jd_analyzer_spring_backend/: ResumeJdAnalyzerSpringBackendApplication.java
resume-jd-analyzer-spring-backend/src/main/java/com/project/resume_jd_analyzer_spring_backend/client/: FastApiClient.java
resume-jd-analyzer-spring-backend/src/main/java/com/project/resume_jd_analyzer_spring_backend/config/: WebClientConfig.java
resume-jd-analyzer-spring-backend/src/main/java/com/project/resume_jd_analyzer_spring_backend/controller/: ResumeController.java
resume-jd-analyzer-spring-backend/src/main/resources/: application.properties
resume-jd-analyzer-spring-backend/src/test/java/com/project/resume_jd_analyzer_spring_backend/: ResumeJdAnalyzerSpringBackendApplicationTests.java
(+3 files in other folders)
